# llm-zoomcamp-2026

./: .gitignore  .gitmodules  pyproject.toml
01-agentic-ai/: homework.db-shm  homework.db-wal  homework_chunks.db  hw1.ipynb  module1.ipynb  rag_helper.py  rag_helper_homework.py
01-agentic-ai/.ipynb_checkpoints/: module1-checkpoint.ipynb
02-vector-search/: module2.ipynb  module2_2.ipynb
02-vector-search/hw2/: groq_evaluation_utils.py  hw2.ipynb  hw4.ipynb  pyproject.toml  rag_helper.py
03-orchestration/: kestra_flow_q1.yaml
04-orchestration/: evaluation_utils.py  groq_evaluation_utils.py  groq_rag_helper.py  ground_truth-new.csv  notebook.ipynb
