[project]
name = "llm-zoomcamp-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=8.0.0,<9.0.0",
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "sqlitesearch>=0.0.5",
    "toyaikit>=0.0.11",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
